MDEV-5045: Server crashes in QPF_query::print_explain with log_slow_verbosity='explain' - Don't print a plan when the statement didn't produce it - Also, add first testcase. We can't check the EXPLAIN from the slow log itself, though.