sql/opt_qpf.cc
@@ -116,13 +116,15 @@ int QPF_query::print_explain(select_result_sink *output,
   {
     /* Start printing from node with id=1 */
     QPF_node *node= get_node(1);
+    if (!node)
+      return 1; /* No query plan */
     return node->print_explain(this, output, explain_flags);
   }
 }
 
-void print_qpf_query(LEX *lex, THD *thd, String *str)
+bool print_qpf_query(LEX *lex, THD *thd, String *str)
 {
-  lex->query_plan_footprint->print_explain_str(thd, str);
+  return lex->query_plan_footprint->print_explain_str(thd, str);
 }
 
 bool QPF_query::print_explain_str(THD *thd, String *out_str)
@@ -132,7 +134,8 @@ bool QPF_query::print_explain_str(THD *thd, String *out_str)
 
   select_result_text_buffer output_buf(thd);
   output_buf.send_result_set_metadata(fields, thd->lex->describe);
-  print_explain(&output_buf, 0);
+  if (print_explain(&output_buf, 0))
+    return true;
   output_buf.save_to(out_str);
   return false;
 }
